Imported Upstream version 0.9.6

--- a/scrotwm.1
+++ b/scrotwm.1
@@ -1,6 +1,7 @@
-.\"	$scrotwm: scrotwm.1,v 1.21 2009/05/25 22:04:56 dwc Exp $
+.\"	$scrotwm: scrotwm.1,v 1.25 2009/09/13 20:07:30 dwc Exp $
 .\"
 .\" Copyright (c) 2009 Marco Peereboom <marco@peereboom.us>
+.\" Copyright (c) 2009 Darrin Chandler <dwchandler@stilyagin.com>
 .\"
 .\" Permission to use, copy, modify, and distribute this software for any
 .\" purpose with or without fee is hereby granted, provided that the above
@@ -14,7 +15,7 @@
 .\" ACTION OF CONTRACT, NEGLIGENCE OR OTHER TORTIOUS ACTION, ARISING OUT OF
 .\" OR IN CONNECTION WITH THE USE OR PERFORMANCE OF THIS SOFTWARE.
 .\"
-.Dd $Mdocdate: May 25 2009 $
+.Dd $Mdocdate: September 13 2009 $
 .Dt SCROTWM 1
 .Os
 .Sh NAME
@@ -77,7 +78,7 @@ Enabling or disabling an option is done by using 1 or 0 respectively.
 .Pp
 The file supports the following keywords:
 .Pp
-.Bl -tag -width "screenshot_enabledXXX" -offset indent -compact
+.Bl -tag -width "title_class_enabledXXX" -offset indent -compact
 .It Cm color_focus
 Border color of the currently focussed window.
 .It Cm color_unfocus
@@ -104,10 +105,6 @@ Update frequency, in seconds, of external script that populates the status bar.
 Enable or disable displaying the clock in the status bar.
 Disable by setting to 0
 so a custom clock could be used in the bar_action script.
-.It Cm spawn_term
-External application that gets spawned when
-.Cm M-S- Ns Aq Cm Return
-is used.
 .It Cm dialog_ratio
 Some applications have dialogue windows that are too small to be useful.
 This ratio is the screen size to what they will be resized.
@@ -117,13 +114,6 @@ Allocates a custom region, removing any autodetected regions which occupy the sa
 space on the screen.
 Defined in the format screen[<idx>]:WIDTHxHEIGHT+X+Y,
 e.g.\& screen[1]:800x1200+0+0.
-.It Cm screenshot_enabled
-Enable or disable screenshot capability.
-.It Cm screenshot_app
-Set to the script that will take screenshots.
-It will be called with "full" or "window" as parameter 1 to indicate what
-screenshot action is expected.
-The script shall handle those cases accordingly.
 .It Cm term_width
 Set a preferred minimum width for the terminal
 If this value is greater than 0,
@@ -136,12 +126,26 @@ is currently supported.
 The
 .Xr xterm 1
 binary must not be setuid or setgid, which it is by default on most systems.
-Users may need to set spawn term to use an alternate copy of the
+Users may need to set program[term] (see the
+.Sx PROGRAMS
+section) to use an alternate copy of the
 .Xr xterm 1
 binary without the setgid bit set.
+.It Cm title_class_enabled
+Enable or disable displaying the window class in the status bar.
+Enable by setting to 1
+.It Cm title_name_enabled
+Enable or disable displaying the window title in the status bar.
+Enable by setting to 1
 .It Cm modkey
 Change mod key.
 Mod1 is generally the ALT key and Mod4 is the windows key on a PC.
+.It Cm program Ns Bq Ar p
+Define new action to spawn a program
+.Ar p .
+See the
+.Sx PROGRAMS
+section below.
 .It Cm bind Ns Bq Ar x
 Bind key combo to action
 .Ar x .
@@ -163,6 +167,72 @@ Colors need to be specified per the
 specification and fonts need to be specified per the
 .Xr XQueryFont 3
 specification.
+.Sh PROGRAMS
+.Nm
+allows you to define custom actions to launch programs of your choice and then
+bind them the same as with built-in actions.
+See the
+.Sx BINDINGS
+section below.
+.Pp
+The default programs are described below:
+.Pp
+.Bl -tag -width "screenshot_wind" -offset indent -compact
+.It Cm term
+xterm
+.It Cm screenshot_all
+screenshot.sh full
+.It Cm screenshot_wind
+screenshot.sh window
+.It Cm lock
+xlock
+.It Cm initscr
+initscreen.sh
+.It Cm menu
+dmenu_run -fn $bar_font -nb $bar_color -nf $bar_font_color -sb $bar_border -sf $bar_color
+.El
+.Pp
+Custom programs in the configuration file are specified as follows:
+.Pp
+.Dl program[<name>] = <progpath> [<arg> [... <arg>]]
+.Pp
+.Aq name
+is any identifier that does not conflict with a built-in action or keyword,
+.Aq progpath
+is the desired program, and
+.Aq arg
+is zero or more arguments to the program.
+.Pp
+The following variables represent settable values in
+.Nm
+(see the
+.Sx CONFIGURATION FILES
+section above),
+and may be used in the
+.Aq arg
+fields and will be substituted for values at the time the program is spawned:
+.Pp
+.Bl -tag -width "$bar_font_color" -offset indent -compact
+.It Cm $bar_border
+.It Cm $bar_color
+.It Cm $bar_font
+.It Cm $bar_font_color
+.It Cm $color_focus
+.It Cm $color_unfocus
+.El
+.Pp
+Example:
+.Bd -literal -offset indent
+program[ff] = /usr/local/bin/firefox http://scrotwm.org/
+bind[ff] = Mod+f # Now Mod+F launched firefox
+.Ed
+.Pp
+To undo the previous:
+.Bd -literal -offset indent
+bind[] = Mod+f
+program[ff] =
+.Ed
+.Pp
 .Sh BINDINGS
 .Nm
 provides many functions (or actions) accessed via key or mouse bindings.
@@ -184,9 +254,9 @@ The default key bindings are described below:
 .Pp
 .Bl -tag -width "M-j, M-<TAB>XXX" -offset indent -compact
 .It Cm M-S- Ns Aq Cm Return
-spawn_term
+term
 .It Cm M-p
-spawn_menu
+menu
 .It Cm M-S-q
 quit
 .It Cm M-q
@@ -253,18 +323,24 @@ version
 .It Cm M-t
 float_toggle
 .It Cm M-S Aq Cm Delete
-spawn_lock
+lock
 .It Cm M-S-i
-spawn_initscr
+initscr
 .El
 .Pp
 The action names and descriptions are listed below:
 .Pp
 .Bl -tag -width "M-j, M-<TAB>XXX" -offset indent -compact
-.It Cm spawn_term
+.It Cm term
 Spawn a new terminal
-.It Cm spawn_menu
+(see
+.Sx PROGRAMS
+above)
+.It Cm menu
 Menu
+(see
+.Sx PROGRAMS
+above)
 .It Cm quit
 Quit
 .Nm
@@ -327,16 +403,28 @@ Move pointer to next region
 Move pointer to previous region
 .It Cm screenshot_all
 Take screenshot of entire screen (if enabled)
+(see
+.Sx PROGRAMS
+above)
 .It Cm screenshot_wind
 Take screenshot of selected window (if enabled)
+(see
+.Sx PROGRAMS
+above)
 .It Cm version
 Toggle version in status bar
 .It Cm float_toggle
 Toggle focused window between tiled and floating
-.It Cm spawn_lock
+.It Cm lock
 Lock screen
-.It Cm spawn_initscr
+(see
+.Sx PROGRAMS
+above)
+.It Cm initscr
 Reinitialize physical screens
+(see
+.Sx PROGRAMS
+above)
 .El
 .Pp
 Custom bindings in the configuration file are specified as follows:
@@ -369,9 +457,9 @@ TRANSSZ
 .It Firefox:Dialog
 FLOAT
 .It Gimp:gimp
-FLOAT | ANYWHERE
+FLOAT + ANYWHERE
 .It MPlayer:xv
-FLOAT | FULLSCREEN
+FLOAT + FULLSCREEN
 .It OpenOffice.org 2.4:VCLSalFrame
 FLOAT
 .It OpenOffice.org 3.1:VCLSalFrame
@@ -379,15 +467,15 @@ FLOAT
 .It pcb:pcb
 FLOAT
 .It xine:Xine Window
-FLOAT | ANYWHERE
+FLOAT + ANYWHERE
 .It xine:xine Panel
-FLOAT | ANYWHERE
+FLOAT + ANYWHERE
 .It xine:xine Video Fullscreen Window
-FULLSCREEN | FLOAT
+FULLSCREEN + FLOAT
 .It Xitk:Xitk Combo
-FLOAT | ANYWHERE
+FLOAT + ANYWHERE
 .It Xitk:Xine Window
-FLOAT | ANYWHERE
+FLOAT + ANYWHERE
 .It XTerm:xterm
 XTERM_FONTADJ
 .El
@@ -411,7 +499,7 @@ Remove border to allow window to use full screen size.
 .Pp
 Custom quirks in the configuration file are specified as follows:
 .Pp
-.Dl quirk[<class>:<name>] = <quirk> [ | <quirk> ... ]
+.Dl quirk[<class>:<name>] = <quirk> [ + <quirk> ... ]
 .Pp
 .Aq class
 and
@@ -421,18 +509,8 @@ specify the window to which the quirk(s) apply, and
 is one of the quirks from the list above.
 For example:
 .Bd -literal -offset indent
-quirk[MPlayer:xv] = FLOAT | FULLSCREEN # let mplayer play
+quirk[MPlayer:xv] = FLOAT + FULLSCREEN # let mplayer play
 quirk[pcb:pcb] = NONE  # remove existing quirk
-.Ed
-.Pp
-Note that spaces in
-.Aq class
-or
-.Aq name
-must be replaced by an underscore in the configuration.
-The config entry for "xine:Xine Panel" would be:
-.Bd -literal -offset indent
-quirk[xine:Xine_Panel] = FLOAT
 .Ed
 .Pp
 You can obtain
