--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+scrotwm (0.9.6-1) unstable; urgency=low
+
+  * New upstream release.
+
+ -- Andrea Bolognani <andre@lagann>  Mon, 14 Sep 2009 11:13:35 +0200
+
 scrotwm (0.9.5-1) unstable; urgency=low
 
   * New upstream release.
