Use correct mail address in debian/changelog.

--- a/debian/changelog
+++ b/debian/changelog
@@ -2,7 +2,7 @@ scrotwm (0.9.6-1) unstable; urgency=low
 
   * New upstream release.
 
- -- Andrea Bolognani <andre@lagann>  Mon, 14 Sep 2009 11:13:35 +0200
+ -- Andrea Bolognani <eof@kiyuko.org>  Mon, 14 Sep 2009 11:13:35 +0200
 
 scrotwm (0.9.5-1) unstable; urgency=low
 
