--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+scrotwm (0.9.9-1) unstable; urgency=low
+
+  * New upstream release.
+
+ -- Andrea Bolognani <eof@kiyuko.org>  Sat, 03 Oct 2009 21:01:30 +0200
+
 scrotwm (0.9.8-1) unstable; urgency=low
 
   * New upstream release.
