--- a/debian/changelog
+++ b/debian/changelog
@@ -1,6 +1,9 @@
 scrotwm (0.9.10-1) unstable; urgency=low
 
   * New upstream release.
+    - Closes: #531826 [scrotwm: doesn't play well with hidden windows]
+  * 003-dont-use-hypen-as-minus-sign.diff: catch more errors.
+  * 102-remove-bash-and-openbsd-assumptions.diff: call top correctly.
 
  -- Andrea Bolognani <eof@kiyuko.org>  Sat, 03 Oct 2009 21:01:30 +0200
 
