Imported Upstream version 0.9.11

--- a/scrotwm.1
+++ b/scrotwm.1
@@ -1,4 +1,4 @@
-.\"	$scrotwm: scrotwm.1,v 1.27 2009/10/02 19:53:12 marco Exp $
+.\"	$scrotwm: scrotwm.1,v 1.28 2009/10/07 03:19:11 marco Exp $
 .\"
 .\" Copyright (c) 2009 Marco Peereboom <marco@peereboom.us>
 .\" Copyright (c) 2009 Darrin Chandler <dwchandler@stilyagin.com>
@@ -15,7 +15,7 @@
 .\" ACTION OF CONTRACT, NEGLIGENCE OR OTHER TORTIOUS ACTION, ARISING OUT OF
 .\" OR IN CONNECTION WITH THE USE OR PERFORMANCE OF THIS SOFTWARE.
 .\"
-.Dd $Mdocdate: October 2 2009 $
+.Dd $Mdocdate: October 7 2009 $
 .Dt SCROTWM 1
 .Os
 .Sh NAME
@@ -191,7 +191,7 @@ xlock
 .It Cm initscr
 initscreen.sh
 .It Cm menu
-dmenu_run -fn $bar_font -nb $bar_color -nf $bar_font_color -sb $bar_border -sf $bar_color
+dmenu_run \-fn $bar_font \-nb $bar_color \-nf $bar_font_color \-sb $bar_border \-sf $bar_color
 .El
 .Pp
 Custom programs in the configuration file are specified as follows:
@@ -454,7 +454,7 @@ in a tiling window manager, such as some dialogs and fullscreen apps.
 The default quirks are described below:
 .Pp
 .Bl -tag -width "OpenOffice.org N.M:VCLSalFrame<TAB>XXX" -offset indent -compact
-.It Firefox-bin:firefox-bin
+.It Firefox\-bin:firefox\-bin
 TRANSSZ
 .It Firefox:Dialog
 FLOAT
