--- a/debian/changelog
+++ b/debian/changelog
@@ -1,4 +1,4 @@
-scrotwm (0.9.10-1) unstable; urgency=low
+scrotwm (0.9.11-1) unstable; urgency=low
 
   * New upstream release.
     - Closes: #531826 [doesn't play well with hidden windows]
@@ -6,7 +6,7 @@ scrotwm (0.9.10-1) unstable; urgency=low
   * 003-dont-use-hypen-as-minus-sign.diff: catch more errors.
   * 102-remove-bash-and-openbsd-assumptions.diff: call top correctly.
 
- -- Andrea Bolognani <eof@kiyuko.org>  Sat, 03 Oct 2009 21:01:30 +0200
+ -- Andrea Bolognani <andre@lagann>  Sat, 10 Oct 2009 11:59:30 +0200
 
 scrotwm (0.9.8-1) unstable; urgency=low
 
