--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+scrotwm (0.9.8-1+bug551732try2) unstable; urgency=low
+
+  * Add assert()s everywhere.
+
+ -- Andrea Bolognani <eof@kiyuko.org>  Fri, 23 Oct 2009 16:53:49 +0200
+
 scrotwm (0.9.8-1) unstable; urgency=low
 
   * New upstream release.
