--- a/debian/changelog
+++ b/debian/changelog
@@ -1,6 +1,7 @@
 scrotwm (0.9.22-1) unstable; urgency=low
 
   * New upstream release.
+  * Bump Standards-Version to 3.8.4 (no changes needed).
 
  -- Andrea Bolognani <eof@kiyuko.org>  Fri, 05 Feb 2010 16:15:59 +0100
 
