--- a/scrotwm.1
+++ b/scrotwm.1
@@ -1,4 +1,4 @@
-.\"	$scrotwm: scrotwm.1,v 1.28 2009/10/07 03:19:11 marco Exp $
+.\"	$scrotwm: scrotwm.1,v 1.29 2010/06/30 00:09:19 marco Exp $
 .\"
 .\" Copyright (c) 2009 Marco Peereboom <marco@peereboom.us>
 .\" Copyright (c) 2009 Darrin Chandler <dwchandler@stilyagin.com>
@@ -15,7 +15,7 @@
 .\" ACTION OF CONTRACT, NEGLIGENCE OR OTHER TORTIOUS ACTION, ARISING OUT OF
 .\" OR IN CONNECTION WITH THE USE OR PERFORMANCE OF THIS SOFTWARE.
 .\"
-.Dd $Mdocdate: October 7 2009 $
+.Dd $Mdocdate: June 30 2010 $
 .Dt SCROTWM 1
 .Os
 .Sh NAME
@@ -142,6 +142,9 @@ Enable by setting to 1
 .It Cm modkey
 Change mod key.
 Mod1 is generally the ALT key and Mod4 is the windows key on a PC.
+.It Cm focus_mode
+Using a value of follow_cursor will make the window manager focus the window
+under the mouse when switching workspaces and creating windows.
 .It Cm program Ns Bq Ar p
 Define new action to spawn a program
 .Ar p .
