--- a/scrotwm.1
+++ b/scrotwm.1
@@ -1,4 +1,4 @@
-.\"	$scrotwm: scrotwm.1,v 1.32 2010/07/03 22:45:32 marco Exp $
+.\"	$scrotwm: scrotwm.1,v 1.33 2010/07/15 14:03:04 marco Exp $
 .\"
 .\" Copyright (c) 2009 Marco Peereboom <marco@peereboom.us>
 .\" Copyright (c) 2009 Darrin Chandler <dwchandler@stilyagin.com>
@@ -15,7 +15,7 @@
 .\" ACTION OF CONTRACT, NEGLIGENCE OR OTHER TORTIOUS ACTION, ARISING OUT OF
 .\" OR IN CONNECTION WITH THE USE OR PERFORMANCE OF THIS SOFTWARE.
 .\"
-.Dd $Mdocdate: July 3 2010 $
+.Dd $Mdocdate: July 15 2010 $
 .Dt SCROTWM 1
 .Os
 .Sh NAME
@@ -101,6 +101,8 @@ External script that populates additional information in the status bar,
 such as battery life.
 .It Cm bar_delay
 Update frequency, in seconds, of external script that populates the status bar.
+.It Cm bar_at_bottom
+Place the statusbar at the bottom of each region instead of the top.
 .It Cm stack_enabled
 Enable or disable displaying the current stacking algorithm in the status bar.
 .It Cm clock_enabled
