--- a/debian/changelog
+++ b/debian/changelog
@@ -2,6 +2,7 @@ scrotwm (0.9.27-1) unstable; urgency=low
 
   * New upstream release.
   * Install Portuguese man page.
+  * Update watch file to reflect new snapshot location.
   * Bump Standards-Version to 3.9.1 (no changes needed).
 
  -- Andrea Bolognani <eof@kiyuko.org>  Sat, 23 Oct 2010 16:38:47 +0200
