--- a/debian/changelog
+++ b/debian/changelog
@@ -3,9 +3,10 @@ scrotwm (0.9.27-1) unstable; urgency=low
   * New upstream release.
   * Install Portuguese man page.
   * Update watch file to reflect new snapshot location.
+  * Recommend suckless-tools, which replaces dwm-tools.
   * Bump Standards-Version to 3.9.1 (no changes needed).
 
- -- Andrea Bolognani <eof@kiyuko.org>  Sat, 23 Oct 2010 16:38:47 +0200
+ -- Andrea Bolognani <eof@kiyuko.org>  Tue, 08 Feb 2011 15:13:17 +0100
 
 scrotwm (0.9.20-1) unstable; urgency=low
 
