Imported Upstream version 0.9.28

--- a/scrotwm.1
+++ b/scrotwm.1
@@ -1,4 +1,4 @@
-.\"	$scrotwm: scrotwm.1,v 1.34 2010/09/16 02:00:51 marco Exp $
+.\"	$scrotwm: scrotwm.1,v 1.35 2011/01/18 19:43:12 marco Exp $
 .\"
 .\" Copyright (c) 2009 Marco Peereboom <marco@peereboom.us>
 .\" Copyright (c) 2009 Darrin Chandler <dwchandler@stilyagin.com>
@@ -15,7 +15,7 @@
 .\" ACTION OF CONTRACT, NEGLIGENCE OR OTHER TORTIOUS ACTION, ARISING OUT OF
 .\" OR IN CONNECTION WITH THE USE OR PERFORMANCE OF THIS SOFTWARE.
 .\"
-.Dd $Mdocdate: September 16 2010 $
+.Dd $Mdocdate: January 18 2011 $
 .Dt SCROTWM 1
 .Os
 .Sh NAME
@@ -140,6 +140,9 @@ Enable or disable displaying the window class in the status bar.
 Enable by setting to 1
 .It Cm title_name_enabled
 Enable or disable displaying the window title in the status bar.
+Enable by setting to 1
+.It Cm window_name_enamed
+Enable or disable displaying the window name in the status bar.
 Enable by setting to 1
 .It Cm modkey
 Change mod key.
