--- a/scrotwm_es.1
+++ b/scrotwm_es.1
@@ -1,4 +1,4 @@
-.\"	$scrotwm: scrotwm_es.1,v 1.4 2010/09/16 02:06:05 marco Exp $
+.\"	$scrotwm: scrotwm_es.1,v 1.5 2011/01/18 19:43:12 marco Exp $
 .\"
 .\" Copyright (c) 2009 Marco Peereboom <marco@peereboom.us>
 .\" Copyright (c) 2009 Darrin Chandler <dwchandler@stilyagin.com>
@@ -15,7 +15,7 @@
 .\" ACTION OF CONTRACT, NEGLIGENCE OR OTHER TORTIOUS ACTION, ARISING OUT OF
 .\" OR IN CONNECTION WITH THE USE OR PERFORMANCE OF THIS SOFTWARE.
 .\"
-.Dd $Mdocdate: September 16 2010 $
+.Dd $Mdocdate: January 18 2011 $
 .Dt SCROTWM 1
 .Os
 .Sh NOMBRE
@@ -143,6 +143,9 @@ Habilitar o deshabilitar la clase de ventana en la barre de estado.
 Habilitado seteando 1
 .It Cm title_name_enabled
 Habilitar o deshabilita el titulo de la ventana en la barra de estado.
+Habilitado seteando 1
+.It Cm window_name_enabled
+Habilitar o deshabilita el nombre de la ventana en la barra de estado.
 Habilitado seteando 1
 .It Cm modkey
 Cambiar mod key.
