--- a/scrotwm_pt.1
+++ b/scrotwm_pt.1
@@ -1,4 +1,4 @@
-.\"    $scrotwm: scrotwm_pt.1,v 1.1 2010/09/16 02:00:51 marco Exp $
+.\"    $scrotwm: scrotwm_pt.1,v 1.2 2011/01/18 19:43:12 marco Exp $
 .\"
 .\" Copyright (c) 2009 Marco Peereboom <marco@peereboom.us>
 .\" Copyright (c) 2009 Darrin Chandler <dwchandler@stilyagin.com>
@@ -15,7 +15,7 @@
 .\" ACTION OF CONTRACT, NEGLIGENCE OR OTHER TORTIOUS ACTION, ARISING OUT OF
 .\" OR IN CONNECTION WITH THE USE OR PERFORMANCE OF THIS SOFTWARE.
 .\"
-.Dd $Mdocdate: September 16 2010 $
+.Dd $Mdocdate: January 18 2011 $
 .Dt SCROTWM 1
 .Os
 .Sh NOME
@@ -142,6 +142,9 @@ Habilita ou desabilita mostrar a classe da janela na barra de status.
 Habilite configurando para 1.
 .It Cm title_name_enabled
 Habilita ou desabilita mostrar o t\('itulo da janela na barra de status.
+Habilite configurando para 1.
+.It Cm window_name_enabled
+Habilita ou desabilita mostrar a nome da janela na barra de status.
 Habilite configurando para 1.
 .It Cm modkey
 Muda a tecla de modifica\(,c\(~ao.
