--- a/scrotwm.1
+++ b/scrotwm.1
@@ -1,4 +1,4 @@
-.\"	$scrotwm: scrotwm.1,v 1.40 2011/06/14 15:47:57 marco Exp $
+.\"	$scrotwm: scrotwm.1,v 1.41 2011/06/23 02:22:18 marco Exp $
 .\"
 .\" Copyright (c) 2009 Marco Peereboom <marco@peereboom.us>
 .\" Copyright (c) 2009 Darrin Chandler <dwchandler@stilyagin.com>
@@ -15,7 +15,7 @@
 .\" ACTION OF CONTRACT, NEGLIGENCE OR OTHER TORTIOUS ACTION, ARISING OUT OF
 .\" OR IN CONNECTION WITH THE USE OR PERFORMANCE OF THIS SOFTWARE.
 .\"
-.Dd $Mdocdate: June 14 2011 $
+.Dd $Mdocdate: June 23 2011 $
 .Dt SCROTWM 1
 .Os
 .Sh NAME
@@ -79,6 +79,12 @@ Enabling or disabling an option is done by using 1 or 0 respectively.
 The file supports the following keywords:
 .Pp
 .Bl -tag -width "title_class_enabledXXX" -offset indent -compact
+.It Cm autorun
+Launch an application in a specified workspace at start-of-day.
+Currently this option does not support arguments so if those are required one
+must use a wrapper script.
+Defined in the format ws[<idx>]:application, e.g. ws[2]:xterm launches and
+xterm in workspace 2
 .It Cm color_focus
 Border color of the currently focussed window.
 .It Cm color_unfocus
