--- a/debian/changelog
+++ b/debian/changelog
@@ -2,6 +2,9 @@ scrotwm (0.9.34-1) unstable; urgency=low
 
   * New upstream release.
   * Install Portuguese man page.
+  * 002-improve-man-page.diff:
+    - improve English man page. Closes: #531844 (please allow one
+      workspace to span multiple monitors).
   * Drop .desktop file, it is now shipped upstream.
   * Update watch file to reflect new snapshot location.
   * Recommend suckless-tools, which replaces dwm-tools.
