--- a/scrotwm_pt.1
+++ b/scrotwm_pt.1
@@ -1,5 +1,3 @@
-.\"    $scrotwm: scrotwm_pt.1,v 1.2 2011/01/18 19:43:12 marco Exp $
-.\"
 .\" Copyright (c) 2009 Marco Peereboom <marco@peereboom.us>
 .\" Copyright (c) 2009 Darrin Chandler <dwchandler@stilyagin.com>
 .\"
@@ -15,7 +13,7 @@
 .\" ACTION OF CONTRACT, NEGLIGENCE OR OTHER TORTIOUS ACTION, ARISING OUT OF
 .\" OR IN CONNECTION WITH THE USE OR PERFORMANCE OF THIS SOFTWARE.
 .\"
-.Dd $Mdocdate: January 18 2011 $
+.Dd $Mdocdate$
 .Dt SCROTWM 1
 .Os
 .Sh NOME
