--- a/scrotwm_ru.1
+++ b/scrotwm_ru.1
@@ -1,5 +1,3 @@
-.\"	$scrotwm: scrotwm_ru.1,v 1.1 2009/10/25 00:32:33 marco Exp $
-.\"
 .\" Copyright (c) 2009 Marco Peereboom <marco@peereboom.us>
 .\" Copyright (c) 2009 Darrin Chandler <dwchandler@stilyagin.com>
 .\"
@@ -15,7 +13,7 @@
 .\" ACTION OF CONTRACT, NEGLIGENCE OR OTHER TORTIOUS ACTION, ARISING OUT OF
 .\" OR IN CONNECTION WITH THE USE OR PERFORMANCE OF THIS SOFTWARE.
 .\"
-.Dd $Mdocdate: October 25 2009 $
+.Dd $Mdocdate$
 .Dt SCROTWM 1
 .Os
 .Sh НАЗВАНИЕ
