--- a/debian/changelog
+++ b/debian/changelog
@@ -1,8 +1,10 @@
 scrotwm (0.10.0-1) unstable; urgency=low
 
   * New upstream release.
+  * Update Debian copyright file Format: field.
+  * Various packaging improvements.
 
- -- Andrea Bolognani <eof@kiyuko.org>  Tue, 17 Jan 2012 22:28:06 +0100
+ -- Andrea Bolognani <eof@kiyuko.org>  Tue, 24 Jan 2012 22:25:30 +0100
 
 scrotwm (0.9.34-1) unstable; urgency=low
 
