--- a/debian/changelog
+++ b/debian/changelog
@@ -2,9 +2,10 @@ scrotwm (0.10.0-1) unstable; urgency=low
 
   * New upstream release.
   * Update Debian copyright file Format: field.
+  * Update Vcs-* control fields.
   * Various packaging improvements.
 
- -- Andrea Bolognani <eof@kiyuko.org>  Tue, 24 Jan 2012 22:25:30 +0100
+ -- Andrea Bolognani <eof@kiyuko.org>  Wed, 25 Jan 2012 11:29:15 +0100
 
 scrotwm (0.9.34-1) unstable; urgency=low
 
